--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,36 @@
 asgiref==3.5.2
 astroid==2.12.13
 backports.zoneinfo==0.2.1
+boto3==1.26.41
+botocore==1.29.41
 colorama==0.4.6
+coverage==7.0.1
 dill==0.3.6
 Django==4.1.4
 django-countries==7.5
 django-debug-toolbar==3.8.1
+django-storages==1.13.2
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
 isort==5.11.1
+jmespath==1.0.1
 lazy-object-proxy==1.8.0
 mccabe==0.7.0
 Pillow==9.3.0
 platformdirs==2.6.0
+postgres==4.0
 psycopg2-binary==2.9.5
+psycopg2-pool==1.1
 PyJWT==2.6.0
 pylint==2.15.8
+python-dateutil==2.8.2
 pytz==2022.6
+s3transfer==0.6.0
+six==1.16.0
 sqlparse==0.4.3
 tomli==2.0.1
 tomlkit==0.11.6
 typing-extensions==4.4.0
 tzdata==2022.7
+urllib3==1.26.13
 wrapt==1.14.1
