--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,35 @@
 asgiref==3.5.2
 astroid==2.12.13
-backports.zoneinfo==0.2.1
 boto3==1.26.41
 botocore==1.29.41
+certifi==2022.12.7
+charset-normalizer==2.1.1
 colorama==0.4.6
+coreapi==2.3.3
+coreschema==0.0.4
 coverage==7.0.1
 dill==0.3.6
 Django==4.1.4
 django-countries==7.5
-django-debug-toolbar==3.8.1
 django-storages==1.13.2
+django-stubs==1.13.1
+django-stubs-ext==0.7.0
+django_debug_toolbar==3.8.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
+drf-yasg==1.21.4
+idna==3.4
+inflection==0.5.1
 isort==5.11.1
+itypes==1.2.0
+Jinja2==3.1.2
 jmespath==1.0.1
 lazy-object-proxy==1.8.0
+MarkupSafe==2.1.1
 mccabe==0.7.0
+mypy==0.991
+mypy-extensions==0.4.3
+packaging==22.0
 Pillow==9.3.0
 platformdirs==2.6.0
 postgres==4.0
@@ -24,13 +38,20 @@ psycopg2-pool==1.1
 PyJWT==2.6.0
 pylint==2.15.8
 python-dateutil==2.8.2
+python-dotenv==0.21.0
 pytz==2022.6
+requests==2.28.1
+ruamel.yaml==0.17.21
+ruamel.yaml.clib==0.2.7
 s3transfer==0.6.0
 six==1.16.0
 sqlparse==0.4.3
 tomli==2.0.1
 tomlkit==0.11.6
-typing-extensions==4.4.0
+types-pytz==2022.7.0.0
+types-PyYAML==6.0.12.2
+typing_extensions==4.4.0
 tzdata==2022.7
+uritemplate==4.1.1
 urllib3==1.26.13
 wrapt==1.14.1
