--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,7 @@ AWS_ACCESS_KEY_ID=aws_access_key_id
 AWS_SECRET_ACCESS_KEY=aws_secret_access_key
 AWS_REGION=us-east-1
 AWS_STORAGE_BUCKET_NAME=yourbucket
+AWS_S3_ENDPOINT_URL=endpoint
+
+TEMPORARY_FILES_DIRECTORY_NAME=directory_name/
+PERMANENT_FILES_DIRECTORY_NAME=directory_name/
