chore: update env example file, remove hardcoded db port

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,14 @@
 SECRET_KEY=your_secret_key
+
+DATABASE_HOST=db
 DATABASE_NAME=database_name
 DATABASE_USER=database_user
 DATABASE_PASS=database_password
+
+DJANGO_SUPERUSER_USERNAME=username
+DJANGO_SUPERUSER_PASSWORD=password
+DJANGO_SUPERUSER_EMAIL=email@mail.ru
+
 AWS_ACCESS_KEY_ID=aws_access_key_id
 AWS_SECRET_ACCESS_KEY=aws_secret_access_key
 AWS_REGION=us-east-1
