--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,38 @@
 asgiref==3.5.2
 astroid==2.12.13
+attrs==22.2.0
+black==23.1.0
 boto3==1.26.41
 botocore==1.29.41
 certifi==2022.12.7
+cffi==1.15.1
 charset-normalizer==2.1.1
+click==8.1.3
 colorama==0.4.6
 coreapi==2.3.3
 coreschema==0.0.4
 coverage==7.0.1
+cryptography==39.0.2
+defusedxml==0.7.1
 dill==0.3.6
+dj-rest-auth==3.0.0
 Django==4.1.4
+django-allauth==0.52.0
+django-cleanup==7.0.0
 django-countries==7.5
 django-storages==1.13.2
 django-stubs==1.13.1
 django-stubs-ext==0.7.0
 django_debug_toolbar==3.8.1
 djangorestframework==3.14.0
+djangorestframework-camel-case==1.4.2
 djangorestframework-simplejwt==5.2.2
 drf-yasg==1.21.4
+exceptiongroup==1.1.0
+flake8==6.0.0
 idna==3.4
 inflection==0.5.1
+iniconfig==2.0.0
 isort==5.11.1
 itypes==1.2.0
 Jinja2==3.1.2
@@ -29,18 +42,28 @@ MarkupSafe==2.1.1
 mccabe==0.7.0
 mypy==0.991
 mypy-extensions==0.4.3
+oauthlib==3.2.2
 packaging==22.0
+pathspec==0.11.0
 Pillow==9.3.0
 platformdirs==2.6.0
+pluggy==1.0.0
 postgres==4.0
 psycopg2-binary==2.9.5
 psycopg2-pool==1.1
+pycodestyle==2.10.0
+pycparser==2.21
+pyflakes==3.0.1
 PyJWT==2.6.0
 pylint==2.15.8
+pytest==7.2.1
+pytest-django==4.5.2
 python-dateutil==2.8.2
 python-dotenv==0.21.0
+python3-openid==3.2.0
 pytz==2022.6
 requests==2.28.1
+requests-oauthlib==1.3.1
 ruamel.yaml==0.17.21
 ruamel.yaml.clib==0.2.7
 s3transfer==0.6.0
